--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">شريحة <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">مكالمة طوارئ</string>
     <string name="accessibility_settings">إعدادات إمكانية الوصول</string>
-    <string name="setup_services">ميزات LineageOS</string>
+    <string name="setup_services">ميزات KusumaOS</string>
     <string name="services_pp_explanation">تعمل هذه الخدمات من أجلك لتوسيع قدرات جهازك. ستستخدم البيانات وفقا لسياسة الخصوصية <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">يمكنك قراءة سياسة الخصوصية على جهاز آخر بزيارة <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">ساهم في تحسين <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -77,9 +77,9 @@
     <string name="intro_restore_title">استعادة التطبيقات والبيانات</string>
     <string name="intro_restore_button">استعادة من نسخة احتياطية</string>
     <string name="update_recovery_title">تحديث وضع الاسترداد (recovery)</string>
-    <string name="update_recovery_description">تحديث Lineage Recovery عند أول تشغيل بعد كل تحديث.</string>
+    <string name="update_recovery_description">تحديث Kusuma Recovery عند أول تشغيل بعد كل تحديث.</string>
     <string name="update_recovery_warning">سيُحدث وضع الاسترداد بمجرد الانتهاء من الإعداد. إذا كنت ترغب في الحفاظ على وضع الاسترداد الحالي، قم بتعطيل هذه الميزة.</string>
-    <string name="update_recovery_setting">تحديث Lineage Recovery إلى جانب نظام التشغيل</string>
+    <string name="update_recovery_setting">تحديث Kusuma Recovery إلى جانب نظام التشغيل</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">التنقل</string>
     <string name="navigation_summary">اختر طريقة التنقل المفضلة</string>
