--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Trucada d\'emergència</string>
     <string name="accessibility_settings">Configuració d\'accessibilitat</string>
-    <string name="setup_services">Característiques de LineageOS</string>
+    <string name="setup_services">Característiques de KusumaOS</string>
     <string name="services_pp_explanation">Aquests serveis funcionen per ampliar les capacitats del vostre dispositiu. Les dades s\'utilitzaran d\'acord amb la política de privadesa de &lt;xliff:g id="name" example="LineageOS"&gt;.</string>
     <string name="services_find_privacy_policy">Podeu llegir la política de privadesa en un altre dispositiu visitant <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Ajuda a millorar <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Restauració d\'aplicacions i dades</string>
     <string name="intro_restore_subtitle">Si teniu una còpia de seguretat del vostre darrer dispositiu <xliff:g id="name" example="LineageOS">%s</xliff:g>, podeu restaurar-la aquí.</string>
     <string name="intro_restore_button">Restaura des de la còpia de seguretat</string>
-    <string name="update_recovery_title">Actualització del recuperador del Lineage</string>
-    <string name="update_recovery_description">Actualitza el recuperador del Lineage en el primer inici posterior a cada actualització.</string>
+    <string name="update_recovery_title">Actualització del recuperador del Kusuma</string>
+    <string name="update_recovery_description">Actualitza el recuperador del Kusuma en el primer inici posterior a cada actualització.</string>
     <string name="update_recovery_warning">La recuperació s\'actualitzarà tan bon punt hàgiu acabat la configuració. Si voleu mantenir-lo intacte, desactiveu aquesta funció.</string>
-    <string name="update_recovery_setting">Actualitza el recuperador del Lineage juntament amb el sistema operatiu</string>
+    <string name="update_recovery_setting">Actualitza el recuperador del Kusuma juntament amb el sistema operatiu</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Navegació</string>
     <string name="navigation_summary">Trieu el mètode de navegació preferit</string>
