--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Galwad brys</string>
     <string name="accessibility_settings">Gosodiadau hygyrchedd</string>
-    <string name="setup_services">Nodweddion LineageOS</string>
+    <string name="setup_services">Nodweddion KusumaOS</string>
     <string name="services_pp_explanation">Mae\'r gwasanaethau hyn yn gweithio i ti fedru ymestyn gallu dy ddyfais. Caiff data ei ddefnyddio yn ôl polisi preifatrwydd <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">Gellir darllen y polisi preifatrwydd ar ddyfais arall wrth ymweld â <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Helpu i wella <xliff:g id="name" example="CyanogenMod">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Adfer apiau a data</string>
     <string name="intro_restore_subtitle">Os oes gennyt gopi wrth gefn o dy ddyfais <xliff:g id="name" example="LineageOS">%s</xliff:g> diwethaf, gellir ei adfer fan hyn.</string>
     <string name="intro_restore_button">Adfer o gopi wrth gefn</string>
-    <string name="update_recovery_title">Diweddaru Modd Adfer Lineage </string>
-    <string name="update_recovery_description">Mae\'n diweddaru Lineage Recovery wrth y cychwyn cyntaf wedi pob diweddariad.</string>
+    <string name="update_recovery_title">Diweddaru Modd Adfer Kusuma </string>
+    <string name="update_recovery_description">Mae\'n diweddaru Kusuma Recovery wrth y cychwyn cyntaf wedi pob diweddariad.</string>
     <string name="update_recovery_warning">Caiff Recovery ei ddiweddaru yn syth ar ôl cwblhau\'r gosod. Os hoffet ti ei gadw\'n gyfan, analluoga\'r nodwedd hon.</string>
-    <string name="update_recovery_setting">Diweddaru Lineage Recovery ochr yn ochr â\'r OS</string>
+    <string name="update_recovery_setting">Diweddaru Kusuma Recovery ochr yn ochr â\'r OS</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Llywio</string>
     <string name="navigation_summary">Dewisa pa ddull llywio sydd well gennyt</string>
