--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Notruf</string>
     <string name="accessibility_settings">Einstellungen zur Barrierefreiheit</string>
-    <string name="setup_services">LineageOS-Funktionen</string>
+    <string name="setup_services">KusumaOS-Funktionen</string>
     <string name="services_pp_explanation">Diese Dienste werden verwendet, um die Funktionen deines Gerätes zu erweitern. Deine Daten werden in Übereinstimmung mit der <xliff:g id="name" example="LineageOS">%1$s</xliff:g> Datenschutzerklärung verwendet.</string>
     <string name="services_find_privacy_policy">Du kannst die Datenschutzbestimmungen auf einem anderen Gerät lesen, indem du <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g> aufrufst.</string>
     <string name="services_help_improve_cm">Hilf <xliff:g id="name" example="LineageOS">%s</xliff:g> zu verbessern</string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Apps und Daten wiederherstellen</string>
     <string name="intro_restore_subtitle">Falls du ein Backup von deinem vorherigen <xliff:g id="name" example="LineageOS">%s</xliff:g>-Gerät hast, kannst du es hier wiederherstellen.</string>
     <string name="intro_restore_button">Aus Backup wiederherstellen</string>
-    <string name="update_recovery_title">Lineage-Recovery aktualisieren</string>
-    <string name="update_recovery_description">Aktualisiert das Lineage-Recovery-Image beim ersten Start nach jedem Update.</string>
+    <string name="update_recovery_title">Kusuma-Recovery aktualisieren</string>
+    <string name="update_recovery_description">Aktualisiert das Kusuma-Recovery-Image beim ersten Start nach jedem Update.</string>
     <string name="update_recovery_warning">Das Recovery-Image wird aktualisiert, sobald du die Einrichtung abgeschlossen hast. Wenn es unverändert bleiben soll, deaktiviere diese Funktion.</string>
-    <string name="update_recovery_setting">Lineage-Recovery zusammen mit dem Betriebssystem aktualisieren</string>
+    <string name="update_recovery_setting">Kusuma-Recovery zusammen mit dem Betriebssystem aktualisieren</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Navigation</string>
     <string name="navigation_summary">Bevorzugte Steuerungsmethode auswählen</string>
