--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Κλήση έκτακτης ανάγκης</string>
     <string name="accessibility_settings">Ρυθμίσεις προσβασιμότητας</string>
-    <string name="setup_services">Χαρακτηριστικά LineageOS</string>
+    <string name="setup_services">Χαρακτηριστικά KusumaOS</string>
     <string name="services_pp_explanation">Οι υπηρεσίες αυτές έχουν σκοπό να επεκτείνουν τις δυνατότητες της συσκευής σας. Τα δεδομένα θα χρησιμοποιηθούν σύμφωνα με την πολιτική απορρήτου του <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">Μπορείτε να διαβάσετε την πολιτική απορρήτου σε μια άλλη συσκευή επισκεπτόμενοι το <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Βοηθήστε στη βελτίωση του <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Επαναφορά εφαρμογών και δεδομένων</string>
     <string name="intro_restore_subtitle">Εάν έχετε αντίγραφο ασφαλείας από την τελευταία <xliff:g id="name" example="LineageOS">%s</xliff:g> συσκευή σας, μπορείτε να το επαναφέρετε εδώ.</string>
     <string name="intro_restore_button">Επαναφορά από αντίγραφο ασφαλείας</string>
-    <string name="update_recovery_title">Ενημέρωση Lineage Recovery</string>
-    <string name="update_recovery_description">Ενημέρωση της Lineage Recovery στην πρώτη εκκίνηση μετά από κάθε ενημέρωση.</string>
+    <string name="update_recovery_title">Ενημέρωση Kusuma Recovery</string>
+    <string name="update_recovery_description">Ενημέρωση της Kusuma Recovery στην πρώτη εκκίνηση μετά από κάθε ενημέρωση.</string>
     <string name="update_recovery_warning">Η Recovery θα ενημερωθεί μόλις ολοκληρώσετε τη ρύθμιση. Αν θέλετε να κρατήσετε την τρέχουσα recovery, απενεργοποιήστε αυτή την επιλογή.</string>
-    <string name="update_recovery_setting">Ενημέρωση Lineage Recovery παράλληλα με το λειτουργικό σύστημα</string>
+    <string name="update_recovery_setting">Ενημέρωση Kusuma Recovery παράλληλα με το λειτουργικό σύστημα</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Πλοήγηση</string>
     <string name="navigation_summary">Επιλογή προτιμώμενης μεθόδου πλοήγησης</string>
