--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -48,7 +48,7 @@
     <string name="yes">Kyllä</string>
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Hätäpuhelu</string>
-    <string name="setup_services">LineageOS-ominaisuudet</string>
+    <string name="setup_services">KusumaOS-ominaisuudet</string>
     <string name="services_help_improve_cm">Auta parantamaan <xliff:g id="name" example="LineageOS">%s</xliff:g>ia</string>
     <string name="services_os_nav_keys_label"><b>Käytä näytön navigointipalkkia</b> fyysisten näppäinten sijaan.</string>
     <string name="settings_biometric_setup_title">Valitse toinen näytön lukitustapa</string>
@@ -72,8 +72,8 @@
     <string name="intro_restore_title">Palauta sovellukset ja tiedot</string>
     <string name="intro_restore_subtitle">Jos sinulla on varmuuskopio edellisestä <xliff:g id="name" example="LineageOS">%s</xliff:g>-laitteestasi, voit palauttaa sen tästä.</string>
     <string name="intro_restore_button">Palauta varmuuskopiosta</string>
-    <string name="update_recovery_title">Päivitä Lineage Recovery</string>
-    <string name="update_recovery_description">Päivittää Lineage Recoveryn jokaisen päivityksen jälkeen ensimmäisellä käynnistyskerralla</string>
+    <string name="update_recovery_title">Päivitä Kusuma Recovery</string>
+    <string name="update_recovery_description">Päivittää Kusuma Recoveryn jokaisen päivityksen jälkeen ensimmäisellä käynnistyskerralla</string>
     <string name="update_recovery_warning">Recovery pävitetään kun asennus on valmis. Jos haluat säilyttää sen ennallaan, poista tämä ominaisuus käytöstä.</string>
-    <string name="update_recovery_setting">Päivitä Lineage Recovery käyttöjärjestelmän rinnalla</string>
+    <string name="update_recovery_setting">Päivitä Kusuma Recovery käyttöjärjestelmän rinnalla</string>
 </resources>
