--- a/res/values-gd/strings.xml
+++ b/res/values-gd/strings.xml
@@ -49,7 +49,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> – <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Gairm-èiginn</string>
     <string name="accessibility_settings">Roghainnean na so-inntrigeachd</string>
-    <string name="setup_services">Gleusan LineageOS</string>
+    <string name="setup_services">Gleusan KusumaOS</string>
     <string name="services_pp_explanation">Leudaichidh na seirbheisean seo comasan an uidheim agad. Thèid an dàta a chleachdadh a-rèir poileasaidh prìobhaideachd <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">’S urrainn dhut am poileasaidh a leughadh air uidheam eile is tu a’ tadhal air <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Cuidich gus piseach a thoirt air <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -74,8 +74,8 @@
     <string name="lockscreen_setup_screen_lock_setup">Suidhich</string>
     <string name="intro_restore_title">Aisig aplacaidean is dàta</string>
     <string name="intro_restore_button">Aisig o lethbhreac-glèidhidh</string>
-    <string name="update_recovery_title">Ùraich aiseag Lineage</string>
-    <string name="update_recovery_description">Ùraichidh seo aiseag Lineage air a’ chiad bhùtadh às dèidh gach ùrachadh.</string>
+    <string name="update_recovery_title">Ùraich aiseag Kusuma</string>
+    <string name="update_recovery_description">Ùraichidh seo aiseag Kusuma air a’ chiad bhùtadh às dèidh gach ùrachadh.</string>
     <string name="update_recovery_warning">Thèid an t-aiseag ùrachadh cho luath ’s a bhios tu deiseil leis an t-suidheachadh. Ma tha thu airson a chumail mar a bha e, cuir an gleus seo à comas.</string>
-    <string name="update_recovery_setting">Ùraich aiseag Lineage leis an t-siostam obrachaidh</string>
+    <string name="update_recovery_setting">Ùraich aiseag Kusuma leis an t-siostam obrachaidh</string>
 </resources>
