--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -49,7 +49,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Chamada de emerxencia</string>
     <string name="accessibility_settings">Configuración da accesibilidade</string>
-    <string name="setup_services">Actualizacións de LineageOS</string>
+    <string name="setup_services">Actualizacións de KusumaOS</string>
     <string name="services_pp_explanation">Estes servizos serven para mellorar as capacidades do seu dispositivo. Os datos utilizaranse de acordo coa <xliff:g id="name" example="Politica de privacidade">%1$s</xliff:g> de LineageOS</string>
     <string name="services_find_privacy_policy">Podes ler a política de privacidade noutro dispositivo visitando <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Axuda a mellorar <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -74,8 +74,8 @@
     <string name="lockscreen_setup_screen_lock_setup">Configura</string>
     <string name="intro_restore_title">Restaurar aplicacións e datos</string>
     <string name="intro_restore_button">Restaurar dende a copia de seguranza</string>
-    <string name="update_recovery_title">Actualizar Recuperador de Lineage</string>
-    <string name="update_recovery_description">Actualiza o Recuperador do Lineage no primeiro arranque despois de cada actualización.</string>
+    <string name="update_recovery_title">Actualizar Recuperador de Kusuma</string>
+    <string name="update_recovery_description">Actualiza o Recuperador do Kusuma no primeiro arranque despois de cada actualización.</string>
     <string name="update_recovery_warning">O Recuperador actualizarase axiña que remates a configuración. Se desexas mantelo intacto, desactiva esta función.</string>
-    <string name="update_recovery_setting">Actualizar o Recuperador de Lineage xunto co sistema operativo</string>
+    <string name="update_recovery_setting">Actualizar o Recuperador de Kusuma xunto co sistema operativo</string>
 </resources>
