--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Panggilan darurat</string>
     <string name="accessibility_settings">Pengaturan aksesibilitas</string>
-    <string name="setup_services">Fitur LineageOS</string>
+    <string name="setup_services">Fitur KusumaOS</string>
     <string name="services_pp_explanation">Layanan ini digunakan untuk meningkatkan kemampuan perangkat Anda. Data akan digunakan sesuai dengan kebijakan privasi <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">Anda dapat membaca kebijakan privasi di perangkat lainnya dengan mengunjungi <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Membantu meningkatkan <xliff:g id="name" example="LineageOS">%s </xliff:g></string>
@@ -77,10 +77,10 @@
     <string name="lockscreen_setup_screen_lock_setup">Menyiapkan</string>
     <string name="intro_restore_title">Pulihkan aplikasi dan data</string>
     <string name="intro_restore_button">Pulihkan dari cadangan</string>
-    <string name="update_recovery_title">Perbarui Lineage Recovery</string>
-    <string name="update_recovery_description">Memperbarui Lineage Recovery saat boot pertama untuk setiap update selanjutnya.</string>
+    <string name="update_recovery_title">Perbarui Kusuma Recovery</string>
+    <string name="update_recovery_description">Memperbarui Kusuma Recovery saat boot pertama untuk setiap update selanjutnya.</string>
     <string name="update_recovery_warning">Recovery akan diupdate segera setelah Anda menyelesaikan penyiapan. Jika Anda ingin menjaganya tetap utuh, nonaktifkan fitur ini.</string>
-    <string name="update_recovery_setting">Perbarui Lineage Recovery bersamaan dengan OS</string>
+    <string name="update_recovery_setting">Perbarui Kusuma Recovery bersamaan dengan OS</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Navigasi</string>
     <string name="navigation_summary">Pilih metode navigasi yang disukai</string>
