--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Emergenza</string>
     <string name="accessibility_settings">Impostazioni di accessibilità</string>
-    <string name="setup_services">Funzioni LineageOS</string>
+    <string name="setup_services">Funzioni KusumaOS</string>
     <string name="services_pp_explanation">Questi servizi funzionano per estendere le funzionalità del tuo dispositivo. I dati saranno utilizzati in conformità con l\'informativa sulla privacy di <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">Puoi leggere l\'informativa sulla privacy su un altro dispositivo visitando <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Contribuisci a migliorare <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Ripristina app e dati</string>
     <string name="intro_restore_subtitle">Se disponi di un backup di un altro telefono con <xliff:g id="name" example="LineageOS">%s</xliff:g>, puoi ripristinarlo ora.</string>
     <string name="intro_restore_button">Ripristina dal backup</string>
-    <string name="update_recovery_title">Aggiorna recovery Lineage</string>
-    <string name="update_recovery_description">Aggiorna la recovery Lineage al primo avvio successivo ad ogni aggiornamento.</string>
+    <string name="update_recovery_title">Aggiorna recovery Kusuma</string>
+    <string name="update_recovery_description">Aggiorna la recovery Kusuma al primo avvio successivo ad ogni aggiornamento.</string>
     <string name="update_recovery_warning">La recovery verrà aggiornata non appena terminerai la configurazione. Se desideri mantenerla intatta, disabilita questa funzione.</string>
-    <string name="update_recovery_setting">Aggiorna la recovery Lineage insieme al sistema operativo</string>
+    <string name="update_recovery_setting">Aggiorna la recovery Kusuma insieme al sistema operativo</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Navigazione</string>
     <string name="navigation_summary">Scegli il metodo di navigazione preferito</string>
