--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">緊急通報</string>
     <string name="accessibility_settings">ユーザー補助設定</string>
-    <string name="setup_services">LineageOS の機能</string>
+    <string name="setup_services">KusumaOS の機能</string>
     <string name="services_pp_explanation">これらのサービスはデバイスの機能を拡張するために動作します。データは <xliff:g id="name" example="LineageOS">%1$s</xliff:g> のプライバシーポリシーに従って使用されます。</string>
     <string name="services_find_privacy_policy">別のデバイスで<xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g>にアクセスしてプライバシーポリシーを読むことができます。</string>
     <string name="services_help_improve_cm"><xliff:g id="name" example="LineageOS">%s</xliff:g>の改善に協力します</string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">アプリとデータを復元</string>
     <string name="intro_restore_subtitle"><xliff:g id="name" example="LineageOS">%s</xliff:g> デバイスのバックアップがあれば、ここで復元できます。</string>
     <string name="intro_restore_button">バックアップから復元</string>
-    <string name="update_recovery_title">Lineage Recovery をアップデート</string>
-    <string name="update_recovery_description">毎回のアップデートの最初の起動時に Lineage Recovery をアップデートします</string>
+    <string name="update_recovery_title">Kusuma Recovery をアップデート</string>
+    <string name="update_recovery_description">毎回のアップデートの最初の起動時に Kusuma Recovery をアップデートします</string>
     <string name="update_recovery_warning">設定が完了したらすぐにリカバリーがアップデートされます。そのまま維持したい場合は、この機能を無効にしてください。</string>
-    <string name="update_recovery_setting">OS と一緒に Lineage Recovery をアップデートする</string>
+    <string name="update_recovery_setting">OS と一緒に Kusuma Recovery をアップデートする</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">ナビゲーション</string>
     <string name="navigation_summary">優先するナビゲーション方法を選択してください</string>
