--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">საგანგებო ზარი</string>
     <string name="accessibility_settings">გამარტივებული პარამეტრები</string>
-    <string name="setup_services">LineageOS-ს შესაძლებლობები</string>
+    <string name="setup_services">KusumaOS-ს შესაძლებლობები</string>
     <string name="services_pp_explanation">ამ მომსახურებების მუშაობა აფართოებს თქვენი მოწყობილობების შესაძლებლობებს. მონაცემებით სარგებლობის პირობებს განსაზღვრავს <xliff:g id="name" example="LineageOS">%1$s</xliff:g> მისი პირადულობის დებულებით.</string>
     <string name="services_find_privacy_policy">შეგიძლიათ გაეცნოთ პირადულობის დაცვის დებულებას სხვა მოწყობილობიდან მისამართზე <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">დაგვეხმარეთ, გავაუმჯობესოთ <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">აპებისა და მონაცემების აღდგენა</string>
     <string name="intro_restore_subtitle">თუ თქვენი წინა <xliff:g id="name" example="LineageOS">%s</xliff:g>-მოწყობილობის სამარქაფო ასლი გაქვთ, აქედან შეძლებთ აღდგენას.</string>
     <string name="intro_restore_button">აღდგენა მარქაფიდან</string>
-    <string name="update_recovery_title">Lineage-აღმდგენის განახლება</string>
-    <string name="update_recovery_description">განაახლებს Lineage-აღმდგენს პირველი ჩატვირთვისას, ყოველი განახლების შემდგომ.</string>
+    <string name="update_recovery_title">Kusuma-აღმდგენის განახლება</string>
+    <string name="update_recovery_description">განაახლებს Kusuma-აღმდგენს პირველი ჩატვირთვისას, ყოველი განახლების შემდგომ.</string>
     <string name="update_recovery_warning">აღმდგენი განახლდება გამართვის დასრულებისთანავე. თუ გსურთ, ხელუხლებელი დარჩეს, გათიშეთ ეს შესაძლებლობა.</string>
-    <string name="update_recovery_setting">განახლდეს Lineage-აღმდგენი სისტემასთან ერთად</string>
+    <string name="update_recovery_setting">განახლდეს Kusuma-აღმდგენი სისტემასთან ერთად</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">სამოძრაო</string>
     <string name="navigation_summary">აირჩიეთ სასურველი ხერხი სამოძრაოდ</string>
