--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Noodoproep</string>
     <string name="accessibility_settings">Toegankelijkheidsinstellingen</string>
-    <string name="setup_services">Functies van LineageOS</string>
+    <string name="setup_services">Functies van KusumaOS</string>
     <string name="services_pp_explanation">Deze diensten worden gebruikt om de mogelijkheden van uw apparaat uit te breiden. Gegevens zullen worden gebruikt conform het privacybeleid van <xliff:g id="name" example="LineageOS">%1$s</xliff:g></string>
     <string name="services_find_privacy_policy">U kunt het privacybeleid op een ander apparaat lezen door <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g> te bezoeken</string>
     <string name="services_help_improve_cm">Help mee met het verbeteren van <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Herstel apps en gegevens</string>
     <string name="intro_restore_subtitle">Als u een back-up heeft van uw laatste <xliff:g id="name" example="LineageOS">%s</xliff:g> apparaat, kunt u deze hier herstellen.</string>
     <string name="intro_restore_button">Backup terugzetten</string>
-    <string name="update_recovery_title">Lineage Recovery bijwerken</string>
-    <string name="update_recovery_description">Lineage Recovery updaten bij de eerste start na elke update</string>
+    <string name="update_recovery_title">Kusuma Recovery bijwerken</string>
+    <string name="update_recovery_description">Kusuma Recovery updaten bij de eerste start na elke update</string>
     <string name="update_recovery_warning">Recovery zal worden bijgewerkt zodra u de installatie hebt voltooid. Als u dit intact wilt houden, schakelt u deze functie uit.</string>
-    <string name="update_recovery_setting">Update Lineage Recovery naast het besturingssysteem</string>
+    <string name="update_recovery_setting">Update Kusuma Recovery naast het besturingssysteem</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Navigatie</string>
     <string name="navigation_summary">Kies de voorkeurs navigatie methode</string>
