--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Połączenie alarmowe</string>
     <string name="accessibility_settings">Ustawienia ułatwień dostępu</string>
-    <string name="setup_services">Funkcje LineageOS</string>
+    <string name="setup_services">Funkcje KusumaOS</string>
     <string name="services_pp_explanation">Te usługi są uruchomione w celu rozszerzenia możliwości twojego urządzenia. Dane będą używane zgodnie z polityką prywatności <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">Możesz przeczytać politykę prywatności na innym urządzeniu, odwiedzając <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Pomóż ulepszyć <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Przywróć aplikacje i dane</string>
     <string name="intro_restore_subtitle">Jeśli masz kopię zapasową z poprzedniego urządzenia z systemem <xliff:g id="name" example="LineageOS">%s</xliff:g>, możesz ją tutaj przywrócić.</string>
     <string name="intro_restore_button">Przywróć z kopii zapasowej</string>
-    <string name="update_recovery_title">Aktualizuj Lineage Recovery</string>
-    <string name="update_recovery_description">Aktualizuje Lineage Recovery przy pierwszym uruchomieniu, po każdej aktualizacji.</string>
+    <string name="update_recovery_title">Aktualizuj Kusuma Recovery</string>
+    <string name="update_recovery_description">Aktualizuje Kusuma Recovery przy pierwszym uruchomieniu, po każdej aktualizacji.</string>
     <string name="update_recovery_warning">Recovery zostanie zaktualizowane po zakończeniu konfiguracji. Jeśli chcesz zachować obecną wersję, wyłącz tę funkcję.</string>
-    <string name="update_recovery_setting">Aktualizuj Lineage Recovery razem z aktualizacją systemu</string>
+    <string name="update_recovery_setting">Aktualizuj Kusuma Recovery razem z aktualizacją systemu</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Nawigacja w systemie</string>
     <string name="navigation_summary">Wybierz preferowaną metodę nawigacji w systemie</string>
