--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Chamada de emergência</string>
     <string name="accessibility_settings">Configurações de acessibilidade</string>
-    <string name="setup_services">Recursos LineageOS</string>
+    <string name="setup_services">Recursos KusumaOS</string>
     <string name="services_pp_explanation">Estes serviços trabalham para você, estendendo os recursos do seu dispositivo. Os dados serão usados de acordo com a política de privacidade em <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">Você pode ler a política de privacidade em outro dispositivo visitando <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Ajude a melhorar o <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Restaurar apps e dados</string>
     <string name="intro_restore_subtitle">Se você tiver um backup do seu último dispositivo <xliff:g id="name" example="LineageOS">%s</xliff:g>, você pode restaurá-lo aqui.</string>
     <string name="intro_restore_button">Restaurar backup</string>
-    <string name="update_recovery_title">Atualizar Lineage Recovery</string>
-    <string name="update_recovery_description">Atualiza o Lineage Recovery na primeira inicialização após cada atualização.</string>
+    <string name="update_recovery_title">Atualizar Kusuma Recovery</string>
+    <string name="update_recovery_description">Atualiza o Kusuma Recovery na primeira inicialização após cada atualização.</string>
     <string name="update_recovery_warning">A recuperação será atualizada assim que você terminar a configuração. Se você deseja mantê-la intacta, desabilite esse recurso.</string>
-    <string name="update_recovery_setting">Atualizar o Lineage Recovery junto com o sistema operacional</string>
+    <string name="update_recovery_setting">Atualizar o Kusuma Recovery junto com o sistema operacional</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Navegação</string>
     <string name="navigation_summary">Escolha o método preferido de navegação</string>
