--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Chamada de emergência</string>
     <string name="accessibility_settings">Definições de acessibilidade</string>
-    <string name="setup_services">Funcionalidades LineageOS</string>
+    <string name="setup_services">Funcionalidades KusumaOS</string>
     <string name="services_pp_explanation">Estes serviços servem para ampliar os recursos do seu telefone. Os dados serão utilizados em conformidade com a politica de privacidade de <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">Pode ler a política de privacidade noutro dispositivo visitando <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Ajude a melhorar a <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -76,10 +76,10 @@
     <string name="lockscreen_setup_screen_lock_setup">Configurar</string>
     <string name="intro_restore_title">Restaurar aplicações e dados</string>
     <string name="intro_restore_button">Restaurar a partir de cópia de segurança</string>
-    <string name="update_recovery_title">Atualizar a recuperação Lineage</string>
-    <string name="update_recovery_description">Atualiza a recuperação Lineage na primeira inicialização subsequente a cada atualização.</string>
+    <string name="update_recovery_title">Atualizar a recuperação Kusuma</string>
+    <string name="update_recovery_description">Atualiza a recuperação Kusuma na primeira inicialização subsequente a cada atualização.</string>
     <string name="update_recovery_warning">A recuperação será atualizada assim que terminar a configuração. Se desejar mantê-la intacta, desative esta opção.</string>
-    <string name="update_recovery_setting">Atualizar a recuperação Lineage aquando a atualização do SO</string>
+    <string name="update_recovery_setting">Atualizar a recuperação Kusuma aquando a atualização do SO</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Navegação</string>
     <string name="navigation_summary">Escolher método de navegação preferido</string>
