--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Экстренный вызов</string>
     <string name="accessibility_settings">Настройки специальных возможностей</string>
-    <string name="setup_services">Возможности LineageOS</string>
+    <string name="setup_services">Возможности KusumaOS</string>
     <string name="services_pp_explanation">Эти службы работают, чтобы расширить возможности вашего устройства. Данные будут использоваться в соответствии с политикой конфиденциальности <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">Вы можете ознакомиться с политикой конфиденциальности на другом устройстве, посетив <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Помочь улучшить <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Восстановить приложения и данные</string>
     <string name="intro_restore_subtitle">Если у вас есть резервная копия с вашего последнего устройства с <xliff:g id="name" example="LineageOS">%s</xliff:g>, вы можете восстановить ее здесь.</string>
     <string name="intro_restore_button">Восстановить из резервной копии</string>
-    <string name="update_recovery_title">Обновление Lineage Recovery</string>
-    <string name="update_recovery_description">Lineage Recovery обновляется при первой загрузке после обновления.</string>
+    <string name="update_recovery_title">Обновление Kusuma Recovery</string>
+    <string name="update_recovery_description">Kusuma Recovery обновляется при первой загрузке после обновления.</string>
     <string name="update_recovery_warning">После установки будет выполнено обновление Recovery. Вы можете отключить эту возможность.</string>
-    <string name="update_recovery_setting">Обновлять Lineage Recovery  вместе с ОС</string>
+    <string name="update_recovery_setting">Обновлять Kusuma Recovery  вместе с ОС</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Навигация</string>
     <string name="navigation_summary">Выберите предпочтительный метод навигации</string>
