--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -48,7 +48,7 @@
     <string name="yes">Áno</string>
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Tiesňový hovor</string>
-    <string name="setup_services">LineageOS funkcie</string>
+    <string name="setup_services">KusumaOS funkcie</string>
     <string name="services_help_improve_cm">Pomôžte vylepšiť <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
     <string name="services_os_nav_keys_label"><b>Používajte navigačné tlačidlá na obrazovke</b> namiesto hardvérových tlačidiel.</string>
     <string name="settings_biometric_setup_title">Vyberte záložný typ zamknutia obrazovky</string>
@@ -70,8 +70,8 @@
     <string name="lockscreen_setup_screen_lock_setup">Nastaviť</string>
     <string name="intro_restore_title">Obnoviť aplikácie a dáta</string>
     <string name="intro_restore_button">Obnoviť zo záloh</string>
-    <string name="update_recovery_title">Aktualizovať Lineage recovery</string>
-    <string name="update_recovery_description">Aktualizovať Lineage recovery pri prvom spustení po každej aktualizácii</string>
+    <string name="update_recovery_title">Aktualizovať Kusuma recovery</string>
+    <string name="update_recovery_description">Aktualizovať Kusuma recovery pri prvom spustení po každej aktualizácii</string>
     <string name="update_recovery_warning">Oddiel recovery bude aktualizovaný ihneď potom, ako dokončíte nastavenie. Vypnite túto funkciu, ak si prajete ponechať oddiel nezmenený.</string>
-    <string name="update_recovery_setting">Aktualizovať Lineage recovery spoločne s OS</string>
+    <string name="update_recovery_setting">Aktualizovať Kusuma recovery spoločne s OS</string>
 </resources>
