--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Klic v sili</string>
     <string name="accessibility_settings">Nastavitve dostopnosti</string>
-    <string name="setup_services">LineageOS funkcije</string>
+    <string name="setup_services">KusumaOS funkcije</string>
     <string name="services_pp_explanation">Te storitve služijo vam za razširitev zmogljivosti vaše naprave. Podatki bodo uporabljeni v skladu z <xliff:g id="name" example="LineageOS">%1$s</xliff:g>-ovo politiko zasebnosti.</string>
     <string name="services_find_privacy_policy">Politiko zasebnosti lahko preberete na drugi napravi z obiskom <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Pomagajte izboljšati <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Obnovite aplikacije in podatke</string>
     <string name="intro_restore_subtitle">Če imate varnostno kopijo iz vaše zadnje <xliff:g id="name" example="LineageOS">%s</xliff:g> naprave, jo lahko obnovite tukaj.</string>
     <string name="intro_restore_button">Obnovi iz varnostne kopije</string>
-    <string name="update_recovery_title">Posodobi obnovitev Lineage</string>
-    <string name="update_recovery_description">Posodobi obnovitev Lineage ob prvem zagonu vsake posodobitve.</string>
+    <string name="update_recovery_title">Posodobi obnovitev Kusuma</string>
+    <string name="update_recovery_description">Posodobi obnovitev Kusuma ob prvem zagonu vsake posodobitve.</string>
     <string name="update_recovery_warning">Obnovitev bo posodobljena takoj, ko zaključite namestitev. Če jo želite ohraniti nedotaknjeno, onemogočite to funkcijo.</string>
-    <string name="update_recovery_setting">Posodobi obnovitev Lineage poleg OS-a</string>
+    <string name="update_recovery_setting">Posodobi obnovitev Kusuma poleg OS-a</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Krmarjenje</string>
     <string name="navigation_summary">Izberite željeni način krmarjenja</string>
