--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Acil durum araması</string>
     <string name="accessibility_settings">Erişilebilirlik ayarları</string>
-    <string name="setup_services">LineageOS özellikleri</string>
+    <string name="setup_services">KusumaOS özellikleri</string>
     <string name="services_pp_explanation">Bu hizmetler, cihazınızın özelliklerini genişletmeniz için çalışır. Veri <xliff:g id="name" example="LineageOS">%1$s</xliff:g>\'un gizlilik politikası ile kullanılacaktır.</string>
     <string name="services_find_privacy_policy">Gizlilik politikasını farklı cihazla <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g> adresini ziyaret ederek okuyabilirsiniz</string>
     <string name="services_help_improve_cm"><xliff:g id="name" example="LineageOS">%s</xliff:g>\'u geliştirmeye yardımcı olun</string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Uygulamaları ve verileri geri yükleyin</string>
     <string name="intro_restore_subtitle">Kullandığınız son <xliff:g id="name" example="LineageOS">%s</xliff:g> cihazınızda yedekleme varsa onu burada geri yükleyebilirsiniz. </string>
     <string name="intro_restore_button">Yedekten geri yükle</string>
-    <string name="update_recovery_title">Lineage Kurtarma Modunu Güncelle</string>
-    <string name="update_recovery_description">Her güncellemeden sonraki ilk açılışta Lineage Kurtarma Modunu günceller.</string>
+    <string name="update_recovery_title">Kusuma Kurtarma Modunu Güncelle</string>
+    <string name="update_recovery_description">Her güncellemeden sonraki ilk açılışta Kusuma Kurtarma Modunu günceller.</string>
     <string name="update_recovery_warning">Kurulum tamamlanır tamamlanmaz kurtarma modu güncellenecektir. Olduğu gibi kalmasını istiyorsanız, bu özelliği devre dışı bırakın.</string>
-    <string name="update_recovery_setting">İşletim Sistemi ile birlikte Lineage Kurtarma Modunu güncelleyin</string>
+    <string name="update_recovery_setting">İşletim Sistemi ile birlikte Kusuma Kurtarma Modunu güncelleyin</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Gezinme</string>
     <string name="navigation_summary">Tercih edilen gezinme yöntemini seçin</string>
