--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -48,7 +48,7 @@
     <string name="no">Ні</string>
     <string name="yes">Так</string>
     <string name="emergency_call">Екстрений виклик</string>
-    <string name="setup_services">Функції LineageOS</string>
+    <string name="setup_services">Функції KusumaOS</string>
     <string name="services_pp_explanation">Ці служби працюють задля розширення підтримки вашого пристрою. Використання даних обмежується політикою приватності <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_metrics_label"><xliff:g id="name" example="Допомогти поліпшити LineageOS">%1$s</xliff:g>, дозволивши надсилання діагностичних даних у <xliff:g id="name" example="LineageOS">%2$s</xliff:g>. Відстежити вас за ними неможливо; вони допоможуть удосконалити автономність, швидкодію та нові можливості <xliff:g id="name" example="LineageOS">%3$s</xliff:g>.</string>
     <string name="services_os_nav_keys_label"><b>Використовувати навігаційні кнопки на екрані
@@ -68,10 +68,10 @@
     <string name="lockscreen_setup_summary"><b>Захистити цей пристрій</b> та запитувати PIN-код, графічний ключ або пароль для розблокування екрану</string>
     <string name="lockscreen_setup_screen_lock_setup">Налаштувати</string>
     <string name="intro_restore_title">Відновіть застосунки й дані</string>
-    <string name="update_recovery_title">Оновлювати режим відновлення Lineage</string>
-    <string name="update_recovery_description">Оновлює режим відновлення Lineage за першого запуску після кожного оновлення.</string>
+    <string name="update_recovery_title">Оновлювати режим відновлення Kusuma</string>
+    <string name="update_recovery_description">Оновлює режим відновлення Kusuma за першого запуску після кожного оновлення.</string>
     <string name="update_recovery_warning">Режим відновлення оновиться, щойно ви завершите налаштування. Якщо ви хочете зберегти наявний режим оновлення, вимкніть цю функцію.</string>
-    <string name="update_recovery_setting">Оновлювати режим відновлення Lineage разом з ОС</string>
+    <string name="update_recovery_setting">Оновлювати режим відновлення Kusuma разом з ОС</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Навігація</string>
     <string name="navigation_summary">Оберіть бажаний спосіб навігації</string>
