--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">Cuộc gọi khẩn cấp</string>
     <string name="accessibility_settings">Cài đặt trợ năng</string>
-    <string name="setup_services">Các tính năng LineageOS</string>
+    <string name="setup_services">Các tính năng KusumaOS</string>
     <string name="services_pp_explanation">Các dịch vụ này giúp bạn mở rộng khả năng của thiết bị. Dữ liệu sẽ được sử dụng theo chính sách bảo mật của <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">Bạn có thể đọc chính sách bảo mật trên một thiết bị khác bằng cách truy cập <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">Giúp cải thiện <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">Khôi phục Sao lưu</string>
     <string name="intro_restore_subtitle">Nếu bạn có bản sao lưu từ thiết bị <xliff:g id="name" example="LineageOS">%s</xliff:g> gần đây nhất của mình, bạn có thể khôi phục nó tại đây.</string>
     <string name="intro_restore_button">Khôi phục từ bản sao lưu</string>
-    <string name="update_recovery_title">Cập nhật Lineage Recovery</string>
-    <string name="update_recovery_description">Cập nhật Lineage Recovery khi bật máy lần đầu sau mỗi bản cập nhật.</string>
+    <string name="update_recovery_title">Cập nhật Kusuma Recovery</string>
+    <string name="update_recovery_description">Cập nhật Kusuma Recovery khi bật máy lần đầu sau mỗi bản cập nhật.</string>
     <string name="update_recovery_warning">Recovery sẽ được cập nhật sau khi bạn hoàn thành cài đặt. Nếu bạn muốn giữ nguyên, hãy tắt tính năng này.</string>
-    <string name="update_recovery_setting">Cập nhật Lineage Recovery song song với hệ điều hành</string>
+    <string name="update_recovery_setting">Cập nhật Kusuma Recovery song song với hệ điều hành</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">Điều hướng</string>
     <string name="navigation_summary">Chọn phương pháp điều hướng ưa thích</string>
