--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">SIM卡<xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">紧急电话</string>
     <string name="accessibility_settings">无障碍设置</string>
-    <string name="setup_services">LineageOS 功能</string>
+    <string name="setup_services">KusumaOS 功能</string>
     <string name="services_pp_explanation">这些服务可帮助您扩展设备的功能。 数据将按照 <xliff:g id="name" example="LineageOS">%1$s</xliff:g>的隐私政策进行使用。</string>
     <string name="services_find_privacy_policy">您可以使用其他设备访问 <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g> 来了解隐私政策</string>
     <string name="services_help_improve_cm">帮助改进 <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
@@ -78,10 +78,10 @@
     <string name="intro_restore_title">恢复应用和数据</string>
     <string name="intro_restore_subtitle">如果您从您最后的 <xliff:g id="name" example="LineageOS">%s</xliff:g> 设备备份，您可以在这里还原它。</string>
     <string name="intro_restore_button">从备份中还原</string>
-    <string name="update_recovery_title">更新 Lineage 恢复</string>
-    <string name="update_recovery_description">每次更新后在第一次启动时更新 Lineage 恢复。</string>
+    <string name="update_recovery_title">更新 Kusuma 恢复</string>
+    <string name="update_recovery_description">每次更新后在第一次启动时更新 Kusuma 恢复。</string>
     <string name="update_recovery_warning">恢复程序将在完成安装后立即更新。若要保持恢复程序不变，请禁用此功能。</string>
-    <string name="update_recovery_setting">与操作系统一起更新 Lineage 恢复</string>
+    <string name="update_recovery_setting">与操作系统一起更新 Kusuma 恢复</string>
     <string name="update_recovery_full_description"><xliff:g id="recovery_update_description">%1$s</xliff:g>\n<xliff:g id="recovery_update_warning">%2$s</xliff:g></string>
     <string name="setup_navigation">导航栏</string>
     <string name="navigation_summary">选择导航栏方式</string>
