--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -50,7 +50,7 @@
     <string name="data_sim_name">شريحة <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">مكالمة طوارئ</string>
     <string name="accessibility_settings">إعدادات إمكانية الوصول</string>
-    <string name="setup_services">ميزات KusumaOS</string>
+    <string name="setup_services">ميزات Kusuma</string>
     <string name="services_pp_explanation">تعمل هذه الخدمات من أجلك لتوسيع قدرات جهازك. ستستخدم البيانات وفقا لسياسة الخصوصية <xliff:g id="name" example="LineageOS">%1$s</xliff:g>.</string>
     <string name="services_find_privacy_policy">يمكنك قراءة سياسة الخصوصية على جهاز آخر بزيارة <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
     <string name="services_help_improve_cm">ساهم في تحسين <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
